# fabric-cicd

./: .changie.yaml  .gitignore  .prettierignore  .prettierrc  CONTRIBUTING.md  CodeQL.yml  README.md  activate.ps1  activate.sh  environment.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements.txt  ruff.toml
.changes/: v0.1.0.md  v0.1.1.md  v0.1.10.md  v0.1.11.md  v0.1.12.md  v0.1.13.md  v0.1.14.md  v0.1.15.md  v0.1.16.md  v0.1.17.md  v0.1.18.md  v0.1.19.md  v0.1.2.md  v0.1.20.md  v0.1.21.md  v0.1.22.md  v0.1.23.md  v0.1.24.md  v0.1.25.md  v0.1.26.md  v0.1.27.md  v0.1.28.md  v0.1.29.md  v0.1.3.md  v0.1.30.md  v0.1.31.md  v0.1.32.md  v0.1.33.md  v0.1.34.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.1.7.md  v0.1.8.md  v0.1.9.md  v0.2.0.md  v0.3.0.md  v0.3.1.md  v1.0.0.md  v1.1.0.md  (+1 more)
.changes/unreleased/: 20260223-115012.yaml  added-20260203-163010.yaml  added-20260204-152349.yaml  added-20260205-163010.yaml  added-20260210-105559.yaml  added-20260210-151850.yaml  added-20260221-190555.yaml  added-20260301-232033.yaml  added-20260304-130253.yaml  added-20260312-113803.yaml  added-20260315-152312.yaml  added-20260319-095618.yaml  added-20260503-000000.yaml  added-20260601-141551.yaml  added-20260603-102604.yaml  added-20260610-161807.yaml  added-20260616-175219.yaml  added-20260708-061701.yaml  added-20260712-120217.yaml  breaking-20260322-110618.yaml  breaking-20260329-150739.yaml  breaking-20260413-145436.yaml  docs-20260127-110059.yaml  docs-20260226-094333.yaml  docs-20260505-135611.yaml  docs-20260506-134300.yaml  docs-20260524-112942.yaml  docs-20260716-115617.yaml  docs-20260716-145101.yaml  fixed-20260128-102844.yaml  fixed-20260202-115910.yaml  fixed-20260204-103056.yaml  fixed-20260204-150115.yaml  fixed-20260224-203928.yaml  fixed-20260302-170539.yaml  fixed-20260311-110454.yaml  fixed-20260316-153630.yaml  fixed-20260319-113604.yaml  fixed-20260325-124736.yaml  fixed-20260330-131318.yaml  (+16 more)
.deploy/: README.md  deploy_fabric_workspace.py  deploy_federated_demo.py  validate_federated_auth.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug.yml  2-feature.yml  3-documentation.yml  4-question.yml  5-copilot.yml  5-tech-debt.yml  6-copilot.yml
.github/agents/: new-item-type.agent.md
.github/policies/: resourceManagement.yml  sdl.yml
.github/prompts/: bug-triage.prompt.yml  feature-triage.prompt.yml  question-triage.prompt.yml
.github/workflows/: ai-issue-triage.yml  bump.yml  changelog.yml  codeql.yml  deploy_to_fabric.yml  e2e-federated-demo.yml  gh-pages.yml  lint.yml  pr-issue-check.yml  publish_docs.yml  test.yml  unit-test.yml  validate-version-bump.yml  validate.yml
devtools/: debug_api.py  debug_local config.py  debug_local.py  debug_parameterization.py  debug_trace_deployment.py  pypi_build_release_dev.ps1
docs/: about.md  changelog.md  code_reference.md  code_sample.md  contribution.md  help.md  index.md
docs/example/: authentication.md  deployment_variable.md  index.md  release_pipeline.md
docs/how_to/: config_deployment.md  deployment_overview.md  example.md  getting_started.md  git_flow.md  index.md  item_types.md  optional_feature.md  parameterization.md  troubleshooting.md  tutorial.md
docs/reference/: index.md  item_types.md
sample/: auth_default_credential.py  auth_spn_secret.py  import_args_from_ado_pipelines.py  optional_parameters.py  set_vars_from_ado_build.py  set_vars_from_git_branch.py
sample/workspace/: Readme.md  config.yml  parameter template.yml  parameter.yml
src/fabric_cicd/: __init__.py  (+4 more)
tests/: test__check_utils.py  test__fabric_endpoint.py  test__file.py  test__http_tracer.py  test_bulk_publish.py  test_config_validator.py  test_deploy_fabric_workspace_script.py  test_deploy_with_config.py  test_environment_publish.py  test_fabric_endpoint.py  test_fabric_workspace.py  test_fqdn_workspace_id.py  test_git_diff_utils.py  test_hard_delete.py  test_integration_publish.py  test_integration_token.py  test_logging.py  test_parameter.py  test_parameter_utils.py  test_publish.py  test_response_collection.py  test_secure_io.py  test_semantic_model_binding.py  test_semantic_model_exclude.py  test_shortcut_exclude.py  test_subfolders.py  test_validate_env_vars.py
(+295 files in other folders)
